# cloudwatch-log-redirector

./: Cargo.toml  readme.md
.github/: dependabot.yml
.github/workflows/: build-release-binaries.yml  rust.yml
src/: main.rs
