[package]
name = "cloudwatch-log-redirector"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Redirect STDERR/STDOUT to CloudWatch Logs"
readme = "readme.md"
repository = "https://github.com/rustyconover/cloudwatch-log-redirector"
author = "Rusty Conover <rusty@conover.me>"
keywords = ["cli", "cloudwatch", "cloudwatchlogs"]


[dependencies]
aws-config = "1.5.8"
aws-sdk-cloudwatchlogs = "1.51.0"
clap = { version = "4.5.20", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
