[package]
name = "cloudwatch-log-redirector"
version = "0.1.9"
edition = "2021"
authors = ["Rusty Conover <rusty@conover.me>"]
license = "MIT OR Apache-2.0"
description = "Redirect STDERR/STDOUT to CloudWatch Logs"
readme = "readme.md"
repository = "https://github.com/rustyconover/cloudwatch-log-redirector"
keywords = ["cli", "cloudwatch", "cloudwatchlogs", "logging", "aws"]
categories = ["command-line-utilities"]
rust-version = "1.78"

[badges]
maintenance = { status = "actively-developed" }

[lints.rust]
unsafe_code = "forbid"

[dependencies]
aws-config = "1.5.9"
aws-sdk-cloudwatchlogs = "1.52.0"
clap = { version = "4.5.20", features = ["derive"] }
futures = "0.3.31"
nix = { version = "0.29.0", features = ["signal"] }
signal-hook = { version = "0.3.17", features = ["extended-siginfo"] }
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
tokio = { version = "1.41.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["signal"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
